--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="container">
         <div class="w-full flex justify-center">
           <div class="flex flex-wrap font-base md:text-3xl text-black">
-            <h3 class="pr-1">wib</h3>
+            <h3 class="pr-1">WIB</h3>
             <div id="clock"></div>
           </div>
         </div>
