--- a/jp/index.html
+++ b/jp/index.html
@@ -126,7 +126,7 @@
       <div class="container">
         <div class="w-full flex justify-center">
           <div class="flex flex-wrap font-base md:text-3xl text-black">
-            <h3 class="pr-1">NIHONGO clocks</h3>
+            <h3 class="pr-1">NIHONGO CLOCKS</h3>
             <div id="clock"></div>
           </div>
         </div>
