--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Good Mood</title>
     <link rel="icon" type="Tegar Sadewa" href="dist/img/reactJS1.png" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP"
-    />
     <link rel="icon" type="Tegar Sadewa" href="dist/img/skill/reactJS1.png" />
     <link href="dist/output.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Cieee kepooo 😜 -->
@@ -95,12 +101,12 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center text-center px-4 lg:w-1/2">
             <h1
-              class="font-bold text-white text-lg md:text-xl mt-1 mb-1 lg:text-5x"
+              class="font-bold text-white text-lg md:text-5xl mt-1 mb-1 lg:text-5x"
             >
               HELLO WORLD
             </h1>
             <span
-              class="font-medium text-center text-base md:text-xs text-white max-w-xl mb-3 lg:text-lg"
+              class="font-medium text-center text-base md:text-lg text-white max-w-xl mb-3 lg:text-lg"
             >
               If you're interested in my website, hit the Angklung icon like a
               boss!
@@ -108,7 +114,7 @@
           </div>
 
           <div class="w-full self-end px-4 lg:w-1/2">
-            <div class="relative mt-10 lg:right-0">
+            <div class="relative mt-10 mb-10 md:mb-0 lg:right-0">
               <a href="https://www.instagram.com/tegarsadewa_"
                 ><img
                   src="dist/img/angklung.png"
@@ -126,7 +132,7 @@
     <section id="Clock" class="py-5 md:py-7 bg-white">
       <div class="container">
         <div class="w-full flex justify-center">
-          <div class="flex flex-wrap font-base md:text-3xl text-black">
+          <div class="flex flex-wrap font-bold md:text-3xl text-black">
             <h3 class="pr-1">WIB</h3>
             <div id="clock"></div>
           </div>
@@ -142,9 +148,7 @@
     >
       <div class="container">
         <div class="w-full">
-          <h4
-            class="font-semibold text-xl md:text-2xl text-white text-center mb-6"
-          >
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center mb-6">
             Spider-mine
           </h4>
         </div>
@@ -274,13 +278,13 @@
     <section id="games" class="pt-16 md:pb-8 bg-slate-800">
       <div class="py-3 bg-slate-900">
         <div class="w-full">
-          <h4 class="font-semibold text-xl md:text-2xl text-white text-center">
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center">
             Games
           </h4>
         </div>
 
         <div class="w-full">
-          <h4 class="font-sans text-xs md:text-2xl text-white text-center mb-6">
+          <h4 class="font-sans text-xs md:text-xl text-white text-center mb-6">
             ( Coming Soon )
           </h4>
         </div>
@@ -325,9 +329,7 @@
     <section id="quote" class="py-24 bg-gradient-to-b from-slate-800 to-white">
       <div class="container">
         <div class="w-full">
-          <h4
-            class="font-semibold text-xl md:text-2xl text-white text-center mb-6"
-          >
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center mb-6">
             Quotes
           </h4>
         </div>
@@ -340,7 +342,7 @@
               Tuhan menciptakan tangis perempuan agar laki-laki melupakan
               tangisnya sendiri
             </p>
-            <h5 class="text-center text-sm">- Mbah Sujiwotejo -</h5>
+            <h5 class="text-center text-sm">— Mbah Sujiwotejo —</h5>
           </div>
         </div>
         <div class="w-full my-2">
@@ -351,7 +353,7 @@
               Kalau masih susah mending sendiri, ngapain ngajak orang lain
               apalagi orang itu orang yang lu sayang
             </p>
-            <h5 class="text-center text-sm">- Ferry Irwandi -</h5>
+            <h5 class="text-center text-sm">— Ferry Irwandi —</h5>
           </div>
         </div>
         <div class="w-full my-2">
@@ -363,7 +365,7 @@
               sudah memilih kemudian mengeluh dan yang bodoh adalah ketika sudah
               mengeluh tidak mencoba pilihan lain
             </p>
-            <h5 class="text-center text-sm">- Dzawin Nur -</h5>
+            <h5 class="text-center text-sm">— Dzawin Nur —</h5>
           </div>
         </div>
       </div>
