--- a/jp/index.html
+++ b/jp/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Good Mood</title>
     <link rel="icon" type="Tegar Sadewa" href="../dist/img/reactJS1.png" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Noto+Sans+JP"
-    />
-    <link rel="icon" type="Tegar Sadewa" href="dist/img/skill/reactJS1.png" />
     <link href="../dist/output.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Cieee kepooo 😜 -->
@@ -95,12 +100,12 @@
         <div class="flex flex-wrap">
           <div class="w-full self-center text-center px-4 lg:w-1/2">
             <h1
-              class="font-bold text-white text-lg md:text-xl mt-1 mb-1 lg:text-5x"
+              class="font-bold text-white text-lg md:text-5xl mt-1 mb-1 lg:text-5x"
             >
               こんにちは世界
             </h1>
             <span
-              class="font-medium text-center text-base md:text-xs text-white max-w-xl mb-3 lg:text-lg"
+              class="font-medium text-center text-base md:text-lg text-white max-w-xl mb-3 lg:text-lg"
             >
               私のウェブサイトに興味があれば、ボスのようにラーメンのアイコンを押してください。
             </span>
@@ -125,7 +130,7 @@
     <section id="Clock" class="py-5 md:py-7 bg-white">
       <div class="container">
         <div class="w-full flex justify-center">
-          <div class="flex flex-wrap font-base md:text-3xl text-black">
+          <div class="flex flex-wrap font-bold md:text-3xl text-black">
             <h3 class="pr-1">NIHONGO CLOCKS</h3>
             <div id="clock"></div>
           </div>
@@ -141,9 +146,7 @@
     >
       <div class="container">
         <div class="w-full">
-          <h4
-            class="font-semibold text-xl md:text-2xl text-white text-center mb-6"
-          >
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center mb-6">
             スパイダーマイン
           </h4>
         </div>
@@ -273,7 +276,7 @@
     <section id="games" class="pt-16 bg-slate-800">
       <div class="py-3 bg-slate-900">
         <div class="w-full">
-          <h4 class="font-semibold text-xl md:text-2xl text-white text-center">
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center">
             ゲーム
           </h4>
         </div>
@@ -324,9 +327,7 @@
     <section id="quote" class="py-24 bg-gradient-to-b from-slate-800 to-white">
       <div class="container">
         <div class="w-full">
-          <h4
-            class="font-semibold text-xl md:text-2xl text-white text-center mb-6"
-          >
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center mb-6">
             引用
           </h4>
         </div>
@@ -338,7 +339,7 @@
             <p class="text-center text-xs md:text-sm">
               神は男性が自分の涙を忘れるように女性の涙を創造した
             </p>
-            <h5 class="text-center text-sm">- Mbah Sujiwotejo -</h5>
+            <h5 class="text-center text-sm">— Mbah Sujiwotejo —</h5>
           </div>
         </div>
         <div class="w-full my-2">
@@ -349,7 +350,7 @@
               それでも難しい場合は、自分でやっても大丈夫です。
               愛する人はもちろん、他の人を招待する必要もありません。
             </p>
-            <h5 class="text-center text-sm">- Ferry Irwandi -</h5>
+            <h5 class="text-center text-sm">— Ferry Irwandi —</h5>
           </div>
         </div>
         <div class="w-full my-2">
@@ -359,7 +360,7 @@
             <p class="text-center text-xs md:text-sm">
               選択には何の問題もありません。間違っているのは、選択した後に文句を言うことであり、愚かなのは、他の選択肢を試していないのに文句を言うことです。
             </p>
-            <h5 class="text-center text-sm">- Dzawin Nur -</h5>
+            <h5 class="text-center text-sm">— Dzawin Nur —</h5>
           </div>
         </div>
       </div>
