--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://id.wikipedia.org/wiki/Freya_Jayawardana">
-                <img
+              <a href="spidermine/freya.html"
+                ><img
                   src="dist/img/spider-mine/spidermineFreya.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineFreya"
               /></a>
-              <a href="https://id.wikipedia.org/wiki/Freya_Jayawardana">
-                <div
+              <a href="spidermine/freya.html"
+                ><div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
                   <h3
@@ -181,13 +181,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://id.wikipedia.org/wiki/Yessica_Tamara">
+              <a href="spidermine/chika.html">
                 <img
                   src="dist/img/spider-mine/spidermineChika.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineChika"
               /></a>
-              <a href="https://id.wikipedia.org/wiki/Yessica_Tamara">
+              <a href="spidermine/chika.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
@@ -204,13 +204,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://id.wikipedia.org/wiki/Reva_Fidela">
+              <a href="spidermine/adel.html">
                 <img
                   src="dist/img/spider-mine/spidermineAdel.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineAdel"
               /></a>
-              <a href="https://id.wikipedia.org/wiki/Reva_Fidela">
+              <a href="spidermine/adel.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
@@ -227,13 +227,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://en.wikipedia.org/wiki/Tzuyu">
+              <a href="spidermine/tzuyu.html">
                 <img
                   src="dist/img/spider-mine/spidermineTzuyu.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineTzuyu"
               /></a>
-              <a href="https://en.wikipedia.org/wiki/Tzuyu">
+              <a href="spidermine/tzuyu.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
@@ -250,13 +250,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://en.wikipedia.org/wiki/Gwen_Stacy_(Spider-Verse)">
+              <a href="spidermine/error.html">
                 <img
                   src="dist/img/spider-mine/spidermine.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="?"
               /></a>
-              <a href="https://en.wikipedia.org/wiki/Gwen_Stacy_(Spider-Verse)">
+              <a href="spidermine/error.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
