--- a/jp/index.html
+++ b/jp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="jp" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -156,13 +156,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://id.wikipedia.org/wiki/Freya_Jayawardana">
+              <a href="../spidermine/freyaJP.html">
                 <img
                   src="../dist/img/spider-mine/spidermineFreya.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineFreya"
               /></a>
-              <a href="https://id.wikipedia.org/wiki/Freya_Jayawardana">
+              <a href="../spidermine/freyaJP.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
@@ -179,13 +179,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://id.wikipedia.org/wiki/Yessica_Tamara">
+              <a href="../spidermine/chikaJP.html">
                 <img
                   src="../dist/img/spider-mine/spidermineChika.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineChika"
               /></a>
-              <a href="https://id.wikipedia.org/wiki/Yessica_Tamara">
+              <a href="../spidermine/chikaJP.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
@@ -202,13 +202,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://id.wikipedia.org/wiki/Reva_Fidela">
+              <a href="../spidermine/adelJP.html">
                 <img
                   src="../dist/img/spider-mine/spidermineAdel.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineAdel"
               /></a>
-              <a href="https://id.wikipedia.org/wiki/Reva_Fidela">
+              <a href="../spidermine/adelJP.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
@@ -225,20 +225,20 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://en.wikipedia.org/wiki/Tzuyu">
+              <a href="../spidermine/tzuyuJP.html">
                 <img
                   src="../dist/img/spider-mine/spidermineTzuyu.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="spidermineTzuyu"
               /></a>
-              <a href="https://en.wikipedia.org/wiki/Tzuyu">
+              <a href="../spidermine/tzuyuJP.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
                   <h3
                     class="font-sans font-bold text-sm text-white md:text-lg text-center py-1 md:py-1"
                   >
-                    ジユ
+                    ツウィ
                   </h3>
                 </div>
               </a>
@@ -248,13 +248,13 @@
             <div
               class="rounded-xl shadow-md hover:scale-105 hover:transition hover:delay-100 shadow-pink-700 overflow-hidden bg-white"
             >
-              <a href="https://en.wikipedia.org/wiki/Gwen_Stacy_(Spider-Verse)">
+              <a href="../spidermine/error.html">
                 <img
                   src="../dist/img/spider-mine/spidermine.jpg"
                   class="opacity-100 hover:opacity-90 md:grayscale md:hover:grayscale-0 md:transform md:duration-500"
                   alt="?"
               /></a>
-              <a href="https://en.wikipedia.org/wiki/Gwen_Stacy_(Spider-Verse)">
+              <a href="../spidermine/error.html">
                 <div
                   class="rounded-xl bg-pink-800 m-1 hover:bg-pink-700 transform duration-500"
                 >
