--- a/spidermine/error.html
+++ b/spidermine/error.html
@@ -29,7 +29,6 @@
   </head>
   <body>
     <!-- Cieee kepooo 😜 -->
-
     <!-- Hero Start -->
     <div class="flex justify-center">
       <img
@@ -39,6 +38,13 @@
       />
     </div>
     <!-- Hero End -->
+    <div class="absolute w-full">
+      <div
+        class="rounded-xl mx-auto bg-slate-900 border border-slate-700 p-2 w-40 lg:w-48 shadow-sm shadow-red-500"
+      >
+        <img src="../dist/img/qr-code.png" alt="QR" />
+      </div>
+    </div>
 
     <script async src="https://www.threads.net/embed.js"></script>
     <script
