--- a/index.html
+++ b/index.html
@@ -274,22 +274,31 @@
     </section>
     <!-- Spidermine end -->
 
-    <!-- Games Start -->
+        <!-- Games Start -->
     <section id="games" class="pt-16 md:pb-8 bg-slate-800">
       <div class="py-3 bg-slate-900">
         <div class="w-full">
-          <h4 class="font-bold text-xl md:text-4xl text-white text-center">
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center mb-6">
             Games
           </h4>
         </div>
 
-        <div class="w-full">
-          <h4 class="font-sans text-xs md:text-xl text-white text-center mb-6">
-            ( Coming Soon )
-          </h4>
-        </div>
-
         <div class="w-full px-3 gap-2 md:gap-8 flex flex-wrap justify-center">
+          <div class="w-1/5 md:w-1/6">
+            <a href="https://hom-pim-pa.vercel.app/"
+              ><img
+                src="dist/img/games/hompimpa.jpg"
+                class="rounded-xl mx-auto mb-1 w-[60px] md:w-[150px] hover:ring-2 hover:scale-105 hover:ring-pink-900 hover:transform durat hover:duration-500"
+                alt="game2"
+            /></a>
+            <a href="https://hom-pim-pa.vercel.app/"
+              ><h2
+                class="font-sans font-semibold text-xs md:text-lg text-center text-white"
+              >
+                Hom-Pim-Pa
+              </h2></a
+            >
+          </div>
           <div class="w-1/5 md:w-1/6">
             <a href="#"
               ><img
@@ -301,22 +310,7 @@
               ><h2
                 class="font-sans font-semibold text-xs md:text-lg text-center text-white"
               >
-                Tic-Tac-Toe
-              </h2></a
-            >
-          </div>
-          <div class="w-1/5 md:w-1/6">
-            <a href="#"
-              ><img
-                src="dist/img/games/fre2.jpg"
-                class="grayscale rounded-xl mx-auto mb-1 w-[60px] md:w-[150px] hover:ring-2 hover:scale-105 hover:ring-pink-900 hover:transform hover:duration-500"
-                alt="game2"
-            /></a>
-            <a href="#"
-              ><h2
-                class="font-sans font-semibold text-xs md:text-lg text-center text-white"
-              >
-                Suit
+                Tic-Tac-Toe <span class="text-xs">(Coming Soon)</span>
               </h2></a
             >
           </div>
@@ -324,7 +318,7 @@
       </div>
     </section>
     <!-- Games End -->
-
+    
     <!-- Quote Start -->
     <section id="quote" class="py-24 bg-gradient-to-b from-slate-800 to-white">
       <div class="container">
