--- a/jp/index.html
+++ b/jp/index.html
@@ -272,43 +272,49 @@
     </section>
     <!-- Spidermine end -->
 
-        <!-- Games Start -->
-    <section id="games" class="pt-16 md:pb-8 bg-slate-800">
+    <!-- Games Start -->
+    <section id="games" class="pt-16 bg-slate-800">
       <div class="py-3 bg-slate-900">
         <div class="w-full">
-          <h4 class="font-bold text-xl md:text-4xl text-white text-center mb-6">
-            Games
+          <h4 class="font-bold text-xl md:text-4xl text-white text-center">
+            ゲーム
           </h4>
+        </div>
+
+        <div class="w-full">
+          <h4
+            class="font-sans text-xs md:text-2xl text-white text-center mb-6"
+          ></h4>
         </div>
 
         <div class="w-full px-3 gap-2 md:gap-8 flex flex-wrap justify-center">
           <div class="w-1/5 md:w-1/6">
             <a href="https://hom-pim-pa.vercel.app/"
               ><img
-                src="dist/img/games/hompimpa.jpg"
-                class="rounded-xl mx-auto mb-1 w-[60px] md:w-[150px] hover:ring-2 hover:scale-105 hover:ring-pink-900 hover:transform durat hover:duration-500"
-                alt="game2"
+                src="../dist/img/games/hompimpa.jpg"
+                class="rounded-xl mx-auto mb-1 w-[60px] md:w-[150px] hover:ring-2 hover:scale-105 hover:ring-pink-900 hover:transform hover:duration-500"
+                alt="game1"
             /></a>
             <a href="https://hom-pim-pa.vercel.app/"
               ><h2
                 class="font-sans font-semibold text-xs md:text-lg text-center text-white"
               >
-                Hom-Pim-Pa
+                三目並べ
               </h2></a
             >
           </div>
           <div class="w-1/5 md:w-1/6">
             <a href="#"
               ><img
-                src="dist/img/games/fre.jpg"
+                src="../dist/img/games/fre2.jpg"
                 class="grayscale rounded-xl mx-auto mb-1 w-[60px] md:w-[150px] hover:ring-2 hover:scale-105 hover:ring-pink-900 hover:transform hover:duration-500"
-                alt="game1"
+                alt="game2"
             /></a>
             <a href="#"
               ><h2
                 class="font-sans font-semibold text-xs md:text-lg text-center text-white"
               >
-                Tic-Tac-Toe <span class="text-xs">(Coming Soon)</span>
+                三すくみ拳 <span class="text-xs">( 近日公開 )</span>
               </h2></a
             >
           </div>
